--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is contains the making of rest api from beggining by sai kiran varma",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Nampally Sai kiran Varma",
   "license": "ISC",
